--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,7 +24,7 @@
         </activity>
 
         <activity
-            android:name=".HomeScreen"
+            android:name=".RoomReservation"
             android:exported="true"/>
 
     </application>
