--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,22 +11,22 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.RoomManagementSystem"
         tools:targetApi="31">
-
+        <activity
+            android:name=".DisplayBookedFacility"
+            android:exported="false" />
         <activity
             android:name=".SplashScreen"
-            android:theme="@style/Theme.MaterialComponents.DayNight.NoActionBar"
-            android:exported="true" >
-        <intent-filter>
-            <action android:name="android.intent.action.MAIN" />
+            android:exported="true"
+            android:theme="@style/Theme.MaterialComponents.DayNight.NoActionBar">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
 
-            <category android:name="android.intent.category.LAUNCHER" />
-        </intent-filter>
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
         </activity>
-
         <activity
             android:name=".RoomReservation"
-            android:exported="true"/>
-
+            android:exported="true" />
     </application>
 
 </manifest>
